Finished menu bar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
         <div class="help">Help</div>
 
 
+        <div id="date-time" class="date"></div>
+        <div class="glass">
+            <img src="./Images/glass.png" alt="Glass">
+        </div>
+        <div class="wifi">
+            <img src="./Images/wifi.png" alt="Wifi">
+        </div>
 
-        <div class="date-time"></div>
+        <div id="terminal-back" class="terminal-back">test</div>
 
     <script src="./dist/main.js"></script>
 
