Started terminal window and date/time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <img src="./Images/wifi.png" alt="Wifi">
         </div>
 
-        <div id="terminal-back" class="terminal-back">test</div>
+        <div id="terminal-back" class="terminal-back">Terminal</div>
+        <div class="buttons">
+            <img src="./Images/buttons.png" alt="buttons">
+        </div>
 
     <script src="./dist/main.js"></script>
 
