--- a/index.html
+++ b/index.html
@@ -39,15 +39,22 @@
                 <div id="prompt2">
                     <img src="./Images/arrow-right-solid.svg" alt="arrow2">
                 </div>
+                <div id="prompt3">
+                    <img src="./Images/arrow-right-solid.svg" alt="arrow3">
+                </div>
             </div>
             <div id="directory">Desktop
                 <div id="directory2">Desktop</div>
+                <div id="directory3">Desktop</div>
             </div>
             <div id="example-command">data.fastq -> analyzed_data
                 <div id="error">'data.fastq -> analyzed_data' is not a recognized command.
-                 Try one of the following<br><br>'ls' to list available tutorials<br>
-                 
-                 </div>
+                 Try one of the following<br><br>-- 'ls' to list available tutorials<br>
+                 -- 'info' for information about this project<br> -- ':q' to quit<br>
+                </div>
+                <div id="input">
+                    <input type="text" id="command" name="command"><br>
+                </div>
             </div>
 
         </div>
