Started on terminal functionality and error handling

--- a/index.html
+++ b/index.html
@@ -33,31 +33,10 @@
             <img src="./Images/buttons.png" alt="buttons">
         </div>
         <div id="terminal-title">Terminal</div>
-        <div id="inner-terminal">
-            <div id="prompt">
-                <img src="./Images/arrow-right-solid.svg" alt="arrow">
-                <div id="prompt2">
-                    <img src="./Images/arrow-right-solid.svg" alt="arrow2">
-                </div>
-                <div id="prompt3">
-                    <img src="./Images/arrow-right-solid.svg" alt="arrow3">
-                </div>
+            <div id="inner-terminal">test</div>
+            <div id="input">
+                <input type="text" id="command" name="command" autofocus>
             </div>
-            <div id="directory">Desktop
-                <div id="directory2">Desktop</div>
-                <div id="directory3">Desktop</div>
-            </div>
-            <div id="example-command">data.fastq -> analyzed_data
-                <div id="error">'data.fastq -> analyzed_data' is not a recognized command.
-                 Try one of the following<br><br>-- 'ls' to list available tutorials<br>
-                 -- 'info' for information about this project<br> -- ':q' to quit<br>
-                </div>
-                <div id="input">
-                    <input type="text" id="command" name="command"><br>
-                </div>
-            </div>
-
-        </div>
     </div>
 
     <script src="./dist/main.js"></script>
