Reworked terminal interface and interactivity

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <img src="./Images/buttons.png" alt="buttons">
         </div>
         <div id="terminal-title">Terminal</div>
-            <div id="inner-terminal">test</div>
-            <div id="input">
-                <input type="text" id="command" name="command" autofocus>
+            <div id="inner-terminal">
+                <div id="prompt">guest@server: ~ $        analysis options</div>
+                <div id="firstoption">RNAseq Differential Expression Analysis</div>
+                <div id="secondoption">test</div>
             </div>
     </div>
 
