Fixed terminal interface

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         <div class="window">Window</div>
         <div class="help">Help</div>
 
-
         <div id="date-time" class="date"></div>
         <div class="glass">
             <img src="./Images/glass.png" alt="Glass">
@@ -35,8 +34,8 @@
         <div id="terminal-title">Terminal</div>
             <div id="inner-terminal">
                 <div id="prompt">guest@server: ~ $        analysis options</div>
-                <div id="firstoption">RNAseq Differential Expression Analysis</div>
-                <div id="secondoption">test</div>
+                <button type="button" class="button1">RNAseq Differential Expression Analysis</button>
+                <button type="button" class="button2">Test</button>
             </div>
     </div>
 
