--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
         <div id="terminal-title">Terminal</div>
             <div id="inner-terminal">
-                <div id="prompt">guest@server: ~ $        analysis options</div>
-                <button type="button" class="button1">RNAseq Differential Expression Analysis</button>
-                <button type="button" class="button2">Test</button>
+                <div id="prompt">guest@server: ~ $        bioinformatics helper</div>
+                <button type="button" id="firstoption">RNAseq Differential Expression Analysis</button>
+                <button type="button" id="secoption">Test</button>
             </div>
     </div>
 
